--- a/analysis/manuscript.tex
+++ b/analysis/manuscript.tex
@@ -48,7 +48,7 @@ najko.jahn@sub.uni-goettingen.de
 
 \authornote{ORCID: https://orcid.org/0000-0001-5105-1463}
 
-\abstract{Ongoing controversies surrounding transformative agreements as a means of transitioning journal publishing to full open access highlight the need for large-scale studies assessing the adoption of open access in hybrid journals, including the extent to which transformative agreements contributed to it. Combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that leverages metadata from over 700 agreements and nine million journal articles.  Estimates suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. In 2022, 58\% of open access articles could be attributed to transformative agreements. Growth can be largely attributed to three large commercial publishers: Elsevier, Springer Nature, and Wiley, but it varies substantially across journals, publishers, disciplines, and country affiliations. These estimates indicate that the current level of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access. In particular, different developments in the OECD and BRICS areas have the potential to hinder the transition of academic journal publishing. These findings are important for researchers and stakeholders engaged in negotiating and evaluating these agreements.}
+\abstract{The ongoing controversy surrounding transformative agreements, which aim to transition journal publishing to full open access, highlight the need for large-scale studies assessing the uptake of open access in hybrid journals. This includes evaluating the extent to which transformative agreements enabled open access. By combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that analyses over 700 agreements and nine million journal articles published in more than 11.000 hybrid journals. Estimates suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. In 2022, 58\% of hybrid open access was enabled by transformative agreements. This trend was largely driven by the three commercial publishers Elsevier, Springer Nature, and Wiley, but the open access uptake varied substantially across journals, publishers, disciplines, and country affiliations. In particular, comparing the developments in the OECD and BRICS areas revealed different publication trends relative to hybrid open access. In conclusion, estimates suggest that current levels of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access.}
 
 \keywords{hybrid open access, transformative agreements, scholarly publishing, big deals, bibliometrics}
 
@@ -177,7 +177,7 @@ agreements in Latin America (Muñoz-Vélez et al., 2024).
 
 Despite these controversies around transformative agreements as a means
 of transitioning journal publishing to full open access, there is
-limited evidence available on the adoption of open access in hybrid
+limited evidence available on the uptake of open access in hybrid
 journals, and the extent to which this can be attributed to
 transformative agreements. Previous studies have focused on specific
 countries (Haucap et al., 2021; Huang et al., 2020; Pölönen et al.,
@@ -207,7 +207,7 @@ questions:
   journals in transformative agreements between 2018 and 2022?
 \item
   To what extent did institutions with a transformation agreement
-  contribute to the adoption of open access in hybrid journals?
+  contribute to open access in hybrid journals?
 \end{itemize}
 
 For both research questions, this study will analyse the variability by
@@ -272,8 +272,8 @@ to the corresponding linking ISSN (ISSN-L), as provided by the ISSN
 International Centre, journals were associated with publishers using the
 ESAC ID, a unique identifier for transformative agreements in the ESAC
 Transformative Agreement Registry. Furthermore, journal subjects
-according to the All Science Journal Classification code (ASJC) were
-added from the Scopus journal source list as of August 2023.
+according to the All Science Journal Classification (ASJC) were added
+from the Scopus journal source list as of August 2023.
 
 Because transformative agreements can include both fully open access and
 hybrid journals, the data were complemented with information about a
@@ -300,10 +300,9 @@ Crossref metadata lacked information to distinguish between original
 research articles, including reviews, and other types of journal
 content, which are often not covered by transformative agreements
 (Borrego et al., 2021), only articles published in regular issues
-indicated by non-numeric pagination were included. Furthermore, an
-expanded version of Unpaywall's paratext recognition approach was
-applied to exclude non-scholarly journal content such as table of
-contents.
+indicated by non-numeric pagination were included. Furthermore, paratext
+recognition was applied to exclude non-scholarly journal content such as
+table of contents.
 
 Open access articles in hybrid journals were identified using the
 Creative Commons (CC) license information in Crossref metadata. License
@@ -323,17 +322,18 @@ study, 742,369 articles under CC license were retrieved using Crossref,
 while 950,260 articles were tagged as ``hybrid'' according to the
 OpenAlex November 2023 release, which was used throughout this study.
 The largest differences concerned articles published between 2018 and
-2020. In 2022, however, Crossref and OpenAlex open access numbers differ
-only slightly (249,511 records using Crossref vs.~255,344 in OpenAlex).
-Notable differences could be observed among some publishers that
-presumably did not provide CC license information to Crossref, including
-AIP Publishing, the American Physiological Society, Emerald, and the
-Royal Society. Crossref license metadata was more complete with regard
-to the articles published by Wiley and the American Chemical Society.
-Finally, inconsistent open access status information in previous
-OpenAlex versions was observed (Jahn et al., 2023). After reporting this
-to OpenAlex, fixing this issue was still ongoing according to the
-release notes, which might also explain part of the discrepancy.
+2020. With regard to the publication year 2022, however, Crossref and
+OpenAlex open access numbers differ only slightly (249,511 records using
+Crossref vs.~255,344 in OpenAlex). Notable differences could be observed
+among some publishers that presumably did not provide CC license
+information to Crossref, including AIP Publishing, the American
+Physiological Society, Emerald, and the Royal Society. Crossref license
+metadata was more complete with regard to the articles published by
+Wiley and the American Chemical Society. Finally, inconsistent open
+access status information in previous OpenAlex versions was observed
+(Jahn et al., 2023). After reporting this to OpenAlex, fixing this issue
+was still ongoing according to the release notes, which might also
+explain part of the discrepancy.
 
 After retrieving the article metadata, the publication volume, including
 open access, was calculated for each journal. To improve the
@@ -350,24 +350,25 @@ OpenAlex. However, because corresponding author affiliation was only
 available for 54\% of the investigated articles in OpenAlex, this study
 focused on first authors and their affiliations instead; approximately
 90\% of the investigated articles had first author affiliation metadata
-in OpenAlex. First authors typically contribute the most to a paper and
-are often considered being lead authors (Larivière et al., 2016).
-Related studies also assumed first authors as a proxy to measure open
-access payments and the impact of transformative agreements (Haucap et
-al., 2021; Shu \& Larivière, 2023; Zhang et al., 2022).
+in OpenAlex, which is a much larger proportion than previoulsy reported
+for the October 2022 snapshot (Zhang et al., 2024). First authors
+typically contribute the most to a paper and are often considered being
+lead authors (Larivière et al., 2016). Related studies also assumed
+first authors as a proxy to examine open access payments and
+transformative agreements (Haucap et al., 2021; Shu \& Larivière, 2023;
+Zhang et al., 2022).
 
-To assess the impact of transformative agreements on hybrid open access,
-participating institutions from the Transformative Agreement Data dump,
-which were crowd-sourced from the agreements and consortia that
-successfully negotiated an agreement, were matched with the first author
-affiliations recorded by OpenAlex using the ROR-ID. Matching also
-considered the duration of agreements according to the ESAC registry.
-Upon inspection, Transformative Agreement Data did not comprehensively
-cover associated institutions, such as university hospitals or
-institutes of large research organisations such as the Max Planck
-Society. To improve the matching, Transformative Agreement Data were
-automatically enriched with associated organisations using OpenAlex's
-institution entity data.
+To estimate the impact of transformative agreements on hybrid open
+access, participating institutions from the Transformative Agreement
+Data dump, which the cOAlition S crowd-sourced from agreement documents
+and consortia, were matched with the first author affiliations recorded
+by OpenAlex using the ROR-ID. Matching also considered the duration of
+agreements according to the ESAC registry. Upon inspection,
+Transformative Agreement Data did not comprehensively cover associated
+institutions, such as university hospitals or institutes of large
+research organisations such as the Max Planck Society. To improve the
+matching, Transformative Agreement Data were automatically enriched with
+associated organisations using OpenAlex's institution entity data.
 
 The so compiled data set consists of 8,922,146 articles published in
 12,857 hybrid journals between 2018 and 2022 (see Figure
@@ -395,7 +396,7 @@ al. (2018), hoaddata contains not only the datasets used in the data
 analysis. It also includes code used to compile the data by connecting
 it to the cloud-based Google Big Query data warehouse, where scholarly
 big data from Crossref, OpenAlex and Unpaywall were imported, using
-bigrquery (Wickham \& Bryan, 2020). To increase computational
+bigrquery (Wickham \& Bryan, 2023). To increase computational
 reproducibility, data aggregation through hoaddata was automatically
 carried out using GitHub Actions, a continuous integration service.
 
@@ -408,7 +409,7 @@ carried out using GitHub Actions, a continuous integration service.
 Between 2018 and 2022, 11,189 out of 12,857 hybrid journals in
 transformative agreements published at least one open access article
 under a Creative Commons license. During this period, these hybrid
-journals provided open access to 742,369 of the 8,146,958 articles,
+journals provided open access to 742,369 out of 8,146,958 articles,
 representing a five-year open access proportion of 9.1\%. Authors who
 could make use of transformative agreements at the time of publication
 contributed 328,957 open access articles. Overall, 394 transformative
@@ -438,7 +439,7 @@ in 2021 and 2022, contributing 58\% of the total open access article
 volume in 2022. However, there was also a notable increase in open
 access provision through other means, presumably publication fees being
 not invoiced through transformative agreements, from 4.1\% (n = 62,625)
-in 2018 to 6.3\% (n = 105,896).
+in 2018 to 6.3\% (n = 105,896) in 2022.
 
 Figure \ref{fig:results_overview}C depicts the substantial variations
 among the hybrid journals included in transformative agreements in terms
@@ -674,8 +675,8 @@ articles published in Physical Sciences journals. While OECD publication
 output in Elsevier's Physical Sciences journals declined from 112,822
 articles in 2018 to 103,766 in 2022, BRICS output increased from 104,654
 to 171,713 in the same five-year period. Furthermore, OECD publication
-output in Health Science Journals and Life Science journals stagnated
-across the investigated hybrid journal portfolios after peaking in 2020.
+output in Health Sciences and Life Sciences journals stagnated after
+peaking in 2020.
 
 \begin{figure}[ht!]
 
@@ -689,17 +690,17 @@ across the investigated hybrid journal portfolios after peaking in 2020.
 To illustrate the situation in 2022, Figure \ref{fig:country_patch}B
 compares the total publication output with the number of open access
 articles. With 391,530 articles, China was the most productive country,
-followed by the United States (268,965 articles) and India (87,428
-articles). In contrast, Western and Northern European countries
-published a considerably high number of open access articles.
-Particularly, Scandinavian countries, the Netherlands and Austria
-recorded above-average open access shares, as indicated by the linear
-trend line. As shown in Figure \ref{fig:country_patch}C, transformative
-agreements contributed to these market positions. Interestingly, the
-United States had a notable open access market share of 15\%, although
-transformative agreements contributed to a lesser extent. Similarly,
-China's open access market share of 7.2\% in 2022 was comparable to that
-of the Netherlands, which was 7.1\%.
+followed by the United States (n = 268,965) and India (n = 87,428). In
+contrast, Western and Northern European countries published a
+considerably high number of open access articles. Particularly,
+Scandinavian countries, the Netherlands and Austria recorded
+above-average open access shares, as indicated by the linear trend line.
+As shown in Figure \ref{fig:country_patch}C, transformative agreements
+contributed to these market positions. Interestingly, the United States
+had a notable open access market share of 15\%, although transformative
+agreements contributed to a lesser extent. Similarly, China's open
+access market share of 7.2\% in 2022 was comparable to that of the
+Netherlands, which was 7.1\%.
 
 Figure \ref{fig:country_top_20_plot} illustrates the development of
 hybrid open access from 2018 to 2022, highlighting the top 20 most
@@ -729,16 +730,15 @@ Planck Society with Springer Compact.
 Since 2021, there has been a general trend towards hybrid open access
 among many high-income countries, driven primarily by transformative
 agreements. However, the proliferation of transformative agreements
-differed across these countries. \# For instance, Germany successfully
-negotiated an agreement with Elsevier not until 2023. Additionally,
-publication limits or eligibility criteria for institutions and article
-types may explain why even countries with widespread agreement
-implementation such as Sweden or the Netherlands did not achieve 100\%
-hybrid open access. Interestingly, in Japan and the United States,
-options other than transformative agreements were the main drivers for
-the increase in hybrid open access. Once again, the graph highlights
-countries with low hybrid open access, particularly non-OECD countries,
-where only a few or no agreements were in place.
+differed across these countries. Additionally, publication limits or
+eligibility criteria for institutions and article types may explain why
+even countries with widespread agreement implementation such as Sweden
+or the Netherlands did not achieve 100\% hybrid open access.
+Interestingly, in Japan and the United States, options other than
+transformative agreements were the main drivers for the increase in
+hybrid open access. Once again, the graph highlights countries with low
+hybrid open access, particularly non-OECD countries, where only a few or
+no agreements were in place.
 
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
@@ -851,28 +851,29 @@ of transformative agreements, particularly with regard to article types
 and caps that limit the number of open access articles covered.
 Furthermore, assessing the quality of the OpenAlex and Crossref data
 used, particularly in terms of affiliations and article types, by
-comparing them with established bibliometric databases such as Scopus
-and Web of Science was beyond the scope of this analysis. Overall, the
-methodology is designed in such a way that the results underestimate
-rather than overestimate the adoption of open access through
-transformative agreements. In addition, the data used in this study are
-openly available, along with the code used for this analysis.
+combining them with established bibliometric databases such as Scopus
+and Web of Science was beyond the scope of this analysis (Visser et al.,
+2021). Overall, the methodology is designed in such a way that the
+results underestimate rather than overestimate the adoption of open
+access through transformative agreements. In addition, the data used in
+this study are openly available, along with the code used for this
+analysis.
 
 Additionally, it must be noted that the study period was significantly
 impacted by the COVID-19 pandemic, which led to an unprecedented number
 of publications and a reduction in international collaboration
 (Aviv-Reuven \& Rosenfeld, 2021), which could explain the observed
-contrasting developments in OECD and BRICS countries. Even before the
-pandemic, growth in publications in Europe was only due to
+contrasting developments in OECD and BRICS countries. However, even
+before the pandemic, growth in publications in Europe was only due to
 internationally co-authored journal articles (Kwiek, 2021). Likewise,
-inflows from China to the US and European countries already declined by
-2020 (Zhao et al., 2023). Furthermore, the study design did not consider
-emerging publication practices such as preprints (Fraser et al., 2021)
-and special issues (Hanson et al., 2023), which have grown rapidly since
-2020. Lastly, it should be emphasised that the study did not address
-financial shifts between subscriptions spending and open access payments
-while analysing hybrid open access through transformative agreements due
-to a lack of data on expenditures.
+inflows from China to the United States and European countries already
+declined by 2020 (Zhao et al., 2023). Furthermore, the study design did
+not consider emerging publication practices such as preprints (Fraser et
+al., 2021) and special issues (Hanson et al., 2023), which have grown
+rapidly since 2020. Lastly, it should be emphasised that the study did
+not address financial shifts between subscriptions spending and open
+access payments while analysing hybrid open access through
+transformative agreements due to a lack of data on expenditures.
 
 This study allows for multiple strands of further research. One is to
 complement this large-scale study with more specific evidence from
@@ -893,10 +894,10 @@ countries, particularly the relationship between economic development
 and open access adoption. From a data perspective, the reporting of open
 access funding, including transformative agreements, is not harmonised,
 but often crowd-sourced from various sources. To improve the assessment
-of transformative agreements, libraries and publishers could agree on
-standards and services to publicly share information about respective
-journal portfolios, participating institutions and open access
-invoicing.
+of transformative agreements, libraries and publishers need to
+collaborate on standards and services to publicly share information
+about respective journal portfolios, participating institutions and open
+access invoicing.
 
 In summary, this study provides empirical insights into the development
 of hybrid open access following the introduction of transformative
@@ -998,7 +999,7 @@ big open-access deal. \emph{Science}.
 \url{https://doi.org/10.1126/science.abi5505}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Brainard_2023}{}}%
-Brainard, J. (2023). {``Transformative''} journals get booted for
+Brainard, J. (2023). {`Transformative'} journals get booted for
 switching to open access too slowly. \emph{Science}.
 \url{https://doi.org/10.1126/science.adj3282}
 
@@ -1042,7 +1043,7 @@ negotiations with {Elsevier}. \emph{Quantitative Science Studies},
 
 \leavevmode\vadjust pre{\hypertarget{ref-Geschuhn_2017}{}}%
 Geschuhn, K., \& Stone, G. (2017). It's the workflows, stupid! What is
-required to make {``offsetting''} work for the open access transition.
+required to make {`offsetting'} work for the open access transition.
 \emph{Insights the {UKSG} Journal}, \emph{30}(3), 103--114.
 \url{https://doi.org/10.1629/uksg.391}
 
@@ -1272,7 +1273,7 @@ Publishing}, \emph{16}(3), 163--166.
 \url{https://doi.org/10.1087/095315103322110923}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Goodin_2023}{}}%
-Rasmussen, K. B. (2023). Interview with {Robert {``Bob''} E. Goodin}.
+Rasmussen, K. B. (2023). Interview with {Robert {`Bob'} E. Goodin}.
 \emph{Tidskrift För Politisk Filosofi}.
 \url{https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
 
@@ -1338,6 +1339,13 @@ university landscape (2010--2020): Part 1---journal-based OA.
 \emph{Scientometrics}, \emph{128}(6), 3601--3625.
 \url{https://doi.org/10.1007/s11192-023-04716-3}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Visser_2021}{}}%
+Visser, M., Eck, N. J. van, \& Waltman, L. (2021). Large-scale
+comparison of bibliographic data sources: {Scopus, Web of Science,
+Dimensions, Crossref, and Microsoft Academic}. \emph{Quantitative
+Science Studies}, \emph{2}(1), 20--41.
+\url{https://doi.org/10.1162/qss_a_00112}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Wenaas_2022}{}}%
 Wenaas, L. (2022). Choices of immediate open access and the relationship
 to journal ranking and publish-and-read deals. \emph{Frontiers in
@@ -1345,9 +1353,15 @@ Research Metrics and Analytics}, \emph{7}.
 \url{https://doi.org/10.3389/frma.2022.943932}
 
 \leavevmode\vadjust pre{\hypertarget{ref-bigrquery}{}}%
-Wickham, H., \& Bryan, J. (2020). \emph{{bigrquery}: An interface to
-{Google's BigQuery API}}.
+Wickham, H., \& Bryan, J. (2023). \emph{Bigrquery: An interface to
+google's 'BigQuery' 'API'}.
 \url{https://CRAN.R-project.org/package=bigrquery}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Zhang_2024}{}}%
+Zhang, L., Cao, Z., Shang, Y., Sivertsen, G., \& Huang, Y. (2024).
+Missing institutions in OpenAlex: Possible reasons, implications, and
+solutions. \emph{Scientometrics}.
+\url{https://doi.org/10.1007/s11192-023-04923-y}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Zhang_2022}{}}%
 Zhang, L., Wei, Y., Huang, Y., \& Sivertsen, G. (2022). Should open
