--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -22,6 +22,8 @@
   year = {2023},
   url = {https://www.politiskfilosofi.se/fulltext/2023-2/pdf/TPF_2023-2_interview_with_robert_bob_e_goodin.pdf}
   }
+
+@article{Zhang_2024, title={Missing institutions in OpenAlex: possible reasons, implications, and solutions}, ISSN={1588-2861}, url={http://dx.doi.org/10.1007/s11192-023-04923-y}, DOI={10.1007/s11192-023-04923-y}, journal={Scientometrics}, publisher={Springer Science and Business Media LLC}, author={Zhang, Lin and Cao, Zhe and Shang, Yuanyuan and Sivertsen, Gunnar and Huang, Ying}, year={2024}, month=feb }
   
 @article{Larivi_re_2016, 
  title={Contributorship and division of labor in knowledge production},
@@ -953,9 +955,11 @@ associated authors}},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
-    year = {2020},
+    year = {2024},
     url = {https://www.R-project.org/},
   }
+
+  @article{Visser_2021, title={Large-scale comparison of bibliographic data sources: {Scopus, Web of Science, Dimensions, Crossref, and Microsoft Academic}}, volume={2}, ISSN={2641-3337}, url={http://dx.doi.org/10.1162/qss_a_00112}, DOI={10.1162/qss_a_00112}, number={1}, journal={Quantitative Science Studies}, publisher={MIT Press - Journals}, author={Visser, Martijn and van Eck, Nees Jan and Waltman, Ludo}, year={2021}, pages={20–41} }
 
 @Article{tidyverse,
     title = {Welcome to the {tidyverse}},
@@ -974,14 +978,6 @@ associated authors}},
     year = {2020},
     note = {R package version 1.1.0},
     url = {https://CRAN.R-project.org/package=rcrossref},
-  }
-
-  @Manual{bigrquery,
-    title = {{{bigrquery}}: An Interface to {{Google's BigQuery API}}},
-    author = {Hadley Wickham and Jennifer Bryan},
-    year = {2020},
-    note = {R package version 1.3.2},
-    url = {https://CRAN.R-project.org/package=bigrquery},
   }
 
   @Manual{crminer,
