--- a/analysis/apa6.sty
+++ b/analysis/apa6.sty
@@ -51,7 +51,7 @@ najko.jahn@sub.uni-goettingen.de
 
 \authornote{ORCID: https://orcid.org/0000-0001-5105-1463}
 
-\abstract{Ongoing controversies surrounding transformative agreements as a means of transitioning journal publishing to full open access highlight the need for large-scale studies assessing the adoption of open access in hybrid journals, including the extent to which transformative agreements contributed to it. Combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that leverages metadata from over 700 agreements and nine million journal articles.  Estimates suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. In 2022, 58\% of open access articles could be attributed to transformative agreements. Growth can be largely attributed to three large commercial publishers: Elsevier, Springer Nature, and Wiley, but it varies substantially across journals, publishers, disciplines, and country affiliations. These estimates indicate that the current level of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access. In particular, different developments in the OECD and BRICS areas have the potential to hinder the transition of academic journal publishing. These findings are important for researchers and stakeholders engaged in negotiating and evaluating these agreements.}
+\abstract{The ongoing controversy surrounding transformative agreements, which aim to transition journal publishing to full open access, highlight the need for large-scale studies assessing the uptake of open access in hybrid journals. This includes evaluating the extent to which transformative agreements enabled open access. By combining publicly available data from various sources, including cOAlition S Journal Checker, Crossref, and OpenAlex, this study presents a novel approach that analyses over 700 agreements and nine million journal articles published in more than 11.000 hybrid journals. Estimates suggest a strong growth in open access between 2018 and 2022 from 4.3\% to 15\%. In 2022, 58\% of hybrid open access was enabled by transformative agreements. This trend was largely driven by the three commercial publishers Elsevier, Springer Nature, and Wiley, but the open access uptake varied substantially across journals, publishers, disciplines, and country affiliations. In particular, comparing the developments in the OECD and BRICS areas revealed different publication trends relative to hybrid open access. In conclusion, estimates suggest that current levels of implementation of transformative agreements is insufficient to bring about a large-scale transition to full open access.}
 
 \keywords{hybrid open access, transformative agreements, scholarly publishing, big deals, bibliometrics}
 
